2007-05-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimplayer-floating-sel.c (floating_sel_attach): set
	"Lock Alpha" to TRUE again on floating selections.

	(floating_sel_to_layer): instead, set it to FALSE when turning
	it into a new layer. Fixes bug #418215 and keeps #161042 closed.

2007-05-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: clamping at 255 is good enough.

2007-05-28  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/gauss.c: clamp to [0;255]. Fixes bug #441681.

2007-05-27  Sven Neumann  <sven@gimp.org>

	* configure.in: bumped version to 2.3.18.

2007-05-27  Sven Neumann  <sven@gimp.org>

	* Made 2.3.17 development release.

2007-05-27  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-utils.[ch] (gimp_container_get_neighbor_of_active):
	new utility function which returns the neighbor of a container's
	active item.

	* app/widgets/gimpcontainerview-utils.[ch]
	(gimp_container_view_remove_active): remove a container view's
	active item, using above function to select its neighbor.

	* app/actions/data-commands.c
	* app/actions/buffers-commands.c
	* app/actions/documents-commands.c
	* app/actions/templates-commands.c: use above functions to select
	reasonable items when deleting from a list (instead of always
	jumping to the first item).

2007-05-26  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpwidgets.c (gimp_coordinates_new): update the
	original width and height when the chain-button is changed to the
	active state.

2007-05-26  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimpsizebox.c (GimpSizeBoxPrivate): removed unused
	struct member.

2007-05-26  Michael Natterer  <mitch@gimp.org>

	* libgimpcolor/gimprgb.c (gimp_param_rgb_values_cmp): fully
	initialize all bytes of "int1" and "int2" so we don't produce
	wrong color compare results (and shut up valgrind).
	Fixes bug #353696.

2007-05-26  Michael Natterer  <mitch@gimp.org>

	* app/config/gimpdisplayconfig.c (gimp_display_config_class_init):